# best_practics

./: pyproject.toml
src/: binary_search_tree.py  node.py
tests/: conftest.py  test_binary_search_tree.py  test_node.py
