[tool.poetry]
name = "best-practics"
version = "0.1.0"
description = ""
authors = ["KatyshaVtyrina <katyshavtyrina@gmail.com>"]
readme = "README.md"
packages = [{include = "best_practics"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
